// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Get a free hosted Postgres database in seconds: `npx create-db`

generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "postgresql"
}

enum UserStatus {
  ACTIVE
  INACTIVE
}

enum UserRole {
  ADMIN
  CUSTOMER
}

enum AccountStatus {
  ACTIVE
  INACTIVE
}

enum TransactionType {
  DEBIT
  CREDIT
}

enum TransactionStatus {
  PENDING
  COMPLETED
  BLOCKED
  FINALIZED
}

enum LedgerType {
  DEBIT
  CREDIT
}

enum OutboxEventStatus {
  PENDING
  PROCESSING
  PUBLISHED
}

model User {
  id           String     @id @default(uuid())
  name         String
  email        String     @unique
  passwordHash String
  role         UserRole   @default(CUSTOMER)
  status       UserStatus @default(ACTIVE)
  createdAt    DateTime   @default(now()) @db.Timestamptz(6)
  deletedAt    DateTime?  @db.Timestamptz(6)

  accounts        Account[]
  refreshSessions RefreshSession[]
}

model Account {
  id             String        @id @default(uuid())
  user           User          @relation(fields: [userId], references: [id])
  userId         String
  balance        BigInt        @default(0)
  status         AccountStatus @default(ACTIVE)
  fraudFlaggedAt DateTime?     @db.Timestamptz(6)
  createdAt      DateTime      @default(now()) @db.Timestamptz(6)
  deletedAt      DateTime?     @db.Timestamptz(6)

  transactions  Transaction[]
  ledgerEntries LedgerEntry[]
  fraudSignals  FraudSignal[]

  @@index([userId])
}

model RefreshSession {
  id        String    @id @default(uuid())
  tokenHash String    @unique
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId    String
  expiresAt DateTime  @db.Timestamptz(6)
  createdAt DateTime  @default(now()) @db.Timestamptz(6)
  revokedAt DateTime? @db.Timestamptz(6)

  @@index([userId])
  @@index([expiresAt])
}

model Transaction {
  id            String            @id @default(uuid())
  transactionId String            @unique
  account       Account           @relation(fields: [accountId], references: [id])
  accountId     String
  type          TransactionType
  amount        BigInt
  status        TransactionStatus @default(PENDING)
  authorizedAt  DateTime?         @db.Timestamptz(6)
  createdAt     DateTime          @default(now()) @db.Timestamptz(6)

  ledger       LedgerEntry?
  fraudSignals FraudSignal[]
}

model FraudSignal {
  id            String      @id @default(uuid())
  account       Account     @relation(fields: [accountId], references: [id], onDelete: Cascade)
  transaction   Transaction @relation(fields: [transactionId], references: [transactionId], onDelete: Cascade)
  accountId     String
  signalType    String
  signalValue   String
  transactionId String
  observedAt    DateTime    @default(now()) @db.Timestamptz(6)
  createdAt     DateTime    @default(now()) @db.Timestamptz(6)

  @@unique([signalType, signalValue, transactionId])
  @@index([signalType, signalValue, observedAt])
  @@index([accountId, observedAt])
}

model AnalyticsMetric {
  id              String   @id @default(uuid())
  bucketStart     DateTime @db.Timestamptz(6)
  completedCount  Int      @default(0)
  completedAmount BigInt   @default(0)
  finalizedCount  Int      @default(0)
  finalizedAmount BigInt   @default(0)
  updatedAt       DateTime @updatedAt @db.Timestamptz(6)

  @@unique([bucketStart])
}

model LedgerEntry {
  id            String      @id @default(uuid())
  transaction   Transaction @relation(fields: [transactionId], references: [transactionId])
  transactionId String      @unique
  account       Account     @relation(fields: [accountId], references: [id])
  accountId     String
  type          LedgerType
  amount        BigInt
  balanceAfter  BigInt
  createdAt     DateTime    @default(now()) @db.Timestamptz(6)
}

model OutboxEvent {
  id            String            @id @default(uuid())
  topic         String
  partitionKey  String
  eventType     String
  eventVersion  Int
  aggregateId   String
  transactionId String
  payload       Json
  status        OutboxEventStatus @default(PENDING)
  attempts      Int               @default(0)
  nextAttemptAt DateTime          @default(now()) @db.Timestamptz(6)
  createdAt     DateTime          @default(now()) @db.Timestamptz(6)
  publishedAt   DateTime?
  lastError     String?

  @@index([transactionId])
  @@index([status, nextAttemptAt, createdAt])
}

model ProcessedEvent {
  eventId      String
  consumerName String
  processedAt  DateTime @default(now()) @db.Timestamptz(6)

  @@id([consumerName, eventId])
}
